--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # 默认输入文件路径
 input_path = c:/Users/admin/Desktop/ArtificialIntelligence/ted/pdf_list.txt
 # 默认输出文件路径 
-output_path = c:/Users/admin/Desktop/ArtificialIntelligence/ted/ted_analysis_output.txt
+output_path = c:/Users/admin/Desktop/ArtificialIntelligence/ted/ted_analysis_output - test.txt
 
 [database]
 # 数据库连接配置
